# AI-Projects

./: .env.example  .gitignore  ASSUMPTIONS.md  LICENSE  README.md  README_MVP.md  SETUP_GUIDE.md  SPEC.md  ai_advisor.py  app.py  dashboard_app.py  docker-compose.yml  index.html  main.py  mvp_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: profile.json
dashboard/: app.py
dashboard/pages/: __init__.py
docs/: README.md  TECHNICAL_DESIGN_AI_JOB_INTELLIGENCE_PLATFORM.md
migrations/: 001_initial_schema.sql
mvp/: config_loader.py  database.py  export.py  report.py  scoring.py  scraper.py
scripts/: init_db.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  jobs.py  profiles.py  reports.py
src/api/schemas/: __init__.py  job.py  profile.py
src/config/: __init__.py  database.py  scraping.py  settings.py
src/ml/: __init__.py  embeddings.py  job_classifier.py  skill_matcher.py
src/models/: __init__.py  job.py  profile.py  score.py
src/scrapers/: __init__.py  base.py
src/services/: __init__.py  job_service.py  nlp_service.py  report_service.py  scoring_service.py
src/utils/: __init__.py  helpers.py  logger.py  validators.py
templates/: base.html  sql_query.html  table_view.html
templates/ai_advisor/: brief.html  index.html  opportunities.html  risks.html
templates/dashboard/: base.html  inventory.html  sales.html
tests/: conftest.py
tests/test_scrapers/: __init__.py
tests/test_services/: test_job_service.py
