[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-intelligence"
version = "0.1.0"
description = "AI-powered job discovery and matching platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fajar Widianto", email = "fajar@example.com"}
]
requires-python = ">=3.11"
keywords = ["job", "career", "ai", "ml", "analytics", "erp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "html2text>=2024.2.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.4.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "openai>=1.12.0",
]
scraping = [
    "playwright>=1.41.0",
]
pdf = [
    "weasyprint>=60.1",
    "reportlab>=4.1.0",
]
all = [
    "ai-job-intelligence[dev,ml,scraping,pdf]",
]

[project.scripts]
job-intelligence = "src.main:main"
init-db = "scripts.init_db:main"
scrape-jobs = "scripts.daily_scrape:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false